force-app/main/default/objects/SPEN_Job_Ref__c/SPEN_Job_Ref__c.object-meta.xml
<CustomObject>
    <label>Job Reference</label>
    <nameField>
        <displayFormat>JB-{00000}</displayFormat>
        <label>Job Ref Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job References</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>