force-app/main/default/objects/SPEN_Job_Ref__c/fields/SPEN_JobStatus__c.field-meta.xml
<CustomField>
    <fullName>SPEN_JobStatus__c</fullName>
    <formula>TEXT(SPEN_Related_Job__r.SPEN_JobStatus__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Status</label>
    <type>Text</type>
</CustomField>