force-app/main/default/objects/SPEN_Job_Ref__c/fields/SPEN_Related_Job__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Related_Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Job</label>
    <referenceTo>SPEN_Job__c</referenceTo>
    <relationshipLabel>Job References (Related Job)</relationshipLabel>
    <relationshipName>Job_References1</relationshipName>
    <type>Lookup</type>
</CustomField>