force-app/main/default/objects/SPEN_Job_Ref__c/fields/SPEN_Related_To_Job__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Related_To_Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related To Job</label>
    <referenceTo>SPEN_Job__c</referenceTo>
    <relationshipLabel>Job References</relationshipLabel>
    <relationshipName>Job_References</relationshipName>
    <type>Lookup</type>
</CustomField>